<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ml.mozillabbsr.www.mozillabbsr.TeamFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bggreen" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="32dp"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitStart"
            android:src="@drawable/mozilla_2017_logo"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/why_mozilla_clubs"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <android.support.v7.widget.CardView
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="5"
                    android:padding="15dp"
                    android:text="@string/why_mozilla_ans"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/plus"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:clickable="true" />


                    <ImageButton
                        android:id="@+id/minus"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
                        android:clickable="true"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/aboutus"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <android.support.v7.widget.CardView
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="5"
                    android:padding="15dp"
                    android:text="@string/about_us_ans"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/plus2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:clickable="true" />

                    <ImageButton
                        android:id="@+id/minus2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_keyboard_arrow_up_black_24dp"
                        android:clickable="true"
                        android:visibility="gone" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/contact"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/member_recyclerview" />

        <android.support.v7.widget.CardView
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/imageView5"
                    android:text="@string/school_of_computer_science"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8"
                    android:layout_toEndOf="@+id/imageView5"
                    android:text="@string/kiit_deemed_to_be_university" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/textView9"
                    android:src="@drawable/ic_phone_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView5"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/mozilla_phn"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView9"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/mon_to_fri_9am_to_6_pm" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView10"
                    android:src="@drawable/ic_mail_black_24dp"
                    android:tint="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView10"
                    android:layout_toEndOf="@+id/imageView6"
                    android:text="@string/mozilla_mail"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView11"
                    android:layout_toEndOf="@+id/imageView4"
                    android:text="@string/send_us_your_query_anytime" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/our_team"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/member_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:nestedScrollingEnabled="false"/>

    </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
